--- a/components/Navbar.module.css
+++ b/components/Navbar.module.css
@@ -1,4 +1,54 @@
-.menu-container a {
-    margin-right: 10px;
-    padding: 10px;
-}
+/* Navbar.module.css */
+
+.menu-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #333;
+    padding: 10px 20px;
+    position: relative;
+  }
+  
+  .menu-toggle {
+    display: none;
+    flex-direction: column;
+    cursor: pointer;
+  } 
+
+  
+  .menu {
+    list-style: none;
+    padding: 0;
+    display: flex;
+  }
+  
+  .menu li {
+    margin-right: 20px;
+  }
+  
+  .menu a {
+    color: white;
+    text-decoration: none;
+    font-size: 16px;
+  }
+  
+  @media (max-width: 768px) {
+    .menu-container {
+      flex-direction: column;
+    }
+  
+    .menu-toggle {
+      display: flex;
+    }
+  
+    .menu {
+      flex-direction: column;
+      align-items: center;
+    }
+  
+    .menu li {
+      margin-right: 0;
+      margin-bottom: 10px;
+    }
+  }
+  
