--- a/styles/globals.css
+++ b/styles/globals.css
@@ -164,3 +164,12 @@ img {
     font-size: 7px;
   }
 }
+
+.cardZoom {
+  transform: scale(1);
+  transition: transform 0.3s ease-in-out;
+}
+
+.cardZoom:hover {
+  transform: scale(1.02); /* Adjust the scale factor as needed */
+}
