--- a/components/Navbar.module.css
+++ b/components/Navbar.module.css
@@ -4,7 +4,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #333;
+    background-color: #1a2b36;
     padding: 10px 20px;
     position: relative;
   }
@@ -35,6 +35,7 @@
   @media (max-width: 768px) {
     .menu-container {
       flex-direction: column;
+      background-color: white;
     }
   
     .menu-toggle {
@@ -52,3 +53,47 @@
     }
   }
   
+
+
+
+
+
+/* Style for small screens */
+@media (max-width: 768px) {
+  .menu {
+    flex-direction: column; /* Stack items vertically */
+    position: absolute;
+    top: 60px; /* Adjust the top position as needed */
+    left: 0;
+    background-color: #140515;
+    width: 100%;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.3s ease-in-out;
+    z-index: 99;
+  }
+
+  .menu.open {
+    max-height: 300px; /* Adjust the maximum height as needed */
+  }
+
+  .menu-toggle {
+    display: block;
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: transparent;
+    border: none;
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+  }
+
+  .menu-toggle:focus {
+    outline: none;
+  }
+
+  .menu li {
+    margin: 10px 0;
+  }
+}
